feat: navbar done

--- a/index.html
+++ b/index.html
@@ -1,11 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index</title>
-</head>
-<body>
-    
-</body>
+
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+
+    <!-- NavBar -->
+    <nav class="bg-white flex w-full justify-between md:px-40 py-4 shadow-md fixed top-0 left-0 right-0 z-50">
+      <div>
+        <img class="h-[35px] w-[85px]" src="./assets/images/logo.svg" alt="" />
+      </div>
+
+      <div class="md:gap-8 hidden lg:flex">
+        <li class="list-none text-lg">
+          <a href="">Home</a>
+        </li>
+        <li class="list-none text-lg">
+          <a class="flex items-center justify-center gap-1" href=""
+            >Shop
+            <svg
+              class="mt-1"
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="lucide lucide-chevron-down-icon lucide-chevron-down"
+            >
+              <path d="m6 9 6 6 6-6" />
+            </svg>
+          </a>
+        </li>
+        <li class="list-none text-lg"><a href="">Our Story</a></li>
+        <li class="list-none text-lg"><a href="">Blog</a></li>
+        <li class="list-none text-lg"><a href="">Contact Us</a></li>
+      </div>
+
+      <div class="flex items-center justify-center md:gap-10 -mt-1">
+        <ol class="flex md:gap-8">
+            <li class="list-none text-lg">
+              <a href="">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  class="lucide lucide-search-icon lucide-search"
+                >
+                  <path d="m21 21-4.34-4.34" />
+                  <circle cx="11" cy="11" r="8" />
+                </svg>
+              </a>
+            </li>
+            <li class="list-none text-lg">
+              <a class="flex items-center justify-center gap-1" href=""></a>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  class="lucide lucide-heart-icon lucide-heart"
+                >
+                  <path
+                    d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
+                  />
+                </svg>
+              </a>
+            </li>
+            <li class="list-none text-lg">
+              <a href="">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  class="lucide lucide-shopping-bag-icon lucide-shopping-bag"
+                >
+                  <path d="M6 2 3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4Z" />
+                  <path d="M3 6h18" />
+                  <path d="M16 10a4 4 0 0 1-8 0" />
+                </svg>
+              </a>
+            </li>
+        </ol>
+
+        <button class="px-4 py-2 bg-black hover:bg-gray-800 text-white rounded-lg cursor-pointer">Login</button>
+      </div>
+    </nav>
+
+    <div style="width: 100%; height: 10000px; background-color: black;" class="z-19">fdsfdsff</div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  </body>
 </html>
