feat: nav bit responsiveness added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
     <!-- NavBar -->
-    <nav class="bg-white flex w-full justify-between md:px-40 py-4 shadow-md fixed top-0 left-0 right-0 z-50">
+    <nav class="bg-white flex w-full justify-between px-5 md:px-20 xl:px-40 py-4 shadow-md fixed top-0 left-0 right-0 z-50">
       <div>
         <img class="h-[35px] w-[85px]" src="./assets/images/logo.svg" alt="" />
       </div>
@@ -44,8 +44,8 @@
         <li class="list-none text-lg"><a href="">Contact Us</a></li>
       </div>
 
-      <div class="flex items-center justify-center md:gap-10 -mt-1">
-        <ol class="flex md:gap-8">
+      <div class="flex items-center justify-center gap-5 md:gap-10 -mt-1">
+        <ol class="flex gap-3 md:gap-8">
             <li class="list-none text-lg">
               <a href="">
                 <svg
