--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index</title>
+
+    <link rel="icon" type="image/svg+xml" href="./assets/images/logo.svg" />
+
+    <title>Krist</title>
 
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
 
     <link rel="stylesheet" href="./style.css" />
 
